--- a/cfgs/autoexec.cfg
+++ b/cfgs/autoexec.cfg
@@ -21,3 +21,65 @@ cl_crosshairstyle "4"
 cl_crosshairthickness "0.630631"
 cl_crosshairusealpha "1"
 cl_fixedcrosshairgap "3"
+
+cl_show_clan_in_death_notice 0
+cl_invites_only_friends 1
+cl_invites_only_mainmenu 1
+
+bind "1" "slot1"
+bind "2" "slot2"
+bind "3" "slot3"
+bind "4" "slot4"
+bind "5" "slot5"
+bind "6" "+spray_menu"
+bind "9" "slot9"
+bind "a" "+moveleft"
+bind "b" "buymenu"
+bind "c" "+radialradio3"
+bind "d" "+moveright"
+bind "e" "+use"
+bind "f" "slot7"
+bind "g" "slot6"
+bind "h" "slot10"
+bind "i" "show_loadout_toggle"
+bind "k" "slot12"
+bind "m" "teammenu"
+bind "n" "clutch_mode_toggle"
+bind "q" "lastinv"
+bind "r" "+reload"
+bind "s" "+back"
+bind "t" "slot8"
+bind "u" "messagemode2"
+bind "v" "+voicerecord"
+bind "w" "+forward"
+bind "x" "+radialradio2"
+bind "y" "messagemode"
+bind "z" "+radialradio"
+bind "KP_UPARROW" "radio1"
+bind "KP_PGUP" "radio2"
+bind "`" "toggleconsole"
+bind "," "buyammo1"
+bind "." "buyammo2"
+bind "/" "noclip"
+bind "-" "demo_togglepause"
+bind "SPACE" "+jump"
+bind "TAB" "+showscores"
+bind "ESCAPE" "cancelselect"
+bind "DEL" "mute"
+bind "HOME" "radio"
+bind "PAUSE" "pause"
+bind "SHIFT" "+speed"
+bind "CTRL" "+duck"
+bind "F3" "autobuy"
+bind "F4" "rebuy"
+bind "F5" "jpeg"
+bind "F6" "save quick"
+bind "F7" "load quick"
+bind "F10" "quit prompt"
+bind "MOUSE1" "+attack"
+bind "MOUSE2" "+attack2"
+bind "MOUSE3" "player_ping"
+bind "MOUSE4" "+lookatweapon"
+bind "MOUSE5" "drop"
+bind "MWHEELUP" "+jump"
+bind "MWHEELDOWN" "+jump"
