--- a/cfgs/autoexec.cfg
+++ b/cfgs/autoexec.cfg
@@ -40,7 +40,7 @@ bind "d" "+moveright"
 bind "e" "+use"
 bind "f" "slot7"
 bind "g" "slot6"
-bind "h" "slot10"
+alias "+jumpthrow" "+jump;-attack"; alias "-jumpthrow" "-jump"; bind "h" "+jumpthrow"
 bind "i" "show_loadout_toggle"
 bind "k" "slot12"
 bind "m" "teammenu"
