--- a/cfgs/autoexec.cfg
+++ b/cfgs/autoexec.cfg
@@ -83,3 +83,5 @@ bind "MOUSE4" "+lookatweapon"
 bind "MOUSE5" "drop"
 bind "MWHEELUP" "+jump"
 bind "MWHEELDOWN" "+jump"
+bind "kp_ins" "buy ak47; buy m4a1; buy vest; buy defuser; buy smokegrenade; buy incgrenade; buy molotov; buy flashbang; buy hegrenade;"
+bind "kp_del" "buy vesthelm;"
