--- a/cfgs/autoexec.cfg
+++ b/cfgs/autoexec.cfg
@@ -25,6 +25,7 @@ cl_fixedcrosshairgap "3"
 cl_show_clan_in_death_notice 0
 cl_invites_only_friends 1
 cl_invites_only_mainmenu 1
+cl_sanitize_muted_players 0
 
 bind "1" "slot1"
 bind "2" "slot2"
