--- a/cfgs/autoexec.cfg
+++ b/cfgs/autoexec.cfg
@@ -22,6 +22,8 @@ cl_crosshairthickness "0.630631"
 cl_crosshairusealpha "1"
 cl_fixedcrosshairgap "3"
 
+sensitivity 1
+
 cl_show_clan_in_death_notice 0
 cl_invites_only_friends 1
 cl_invites_only_mainmenu 1
